<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/twoplayerwordgame_menu_frame">

    <Button
        android:id="@+id/twoplayerwordgame_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_continue_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_public_match_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_public_match_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_private_match_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_private_match_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_leaderboard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_leaderboard_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_create_profile_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_music_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_music_on_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_acknowledgements_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_acknowledgements_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_instructions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_instructions_label"/>

    <Button
        android:id="@+id/twoplayerwordgame_quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/twoplayerwordgame_quit_label"/>

</LinearLayout>