<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ProgressBar
        android:id="@+id/twoplayerwordgame_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        style="@android:style/Widget.ProgressBar.Horizontal"/>

    <RelativeLayout
        android:id="@+id/twoplayerwordgame_game_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/twoplayerwordgame_timer_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/twoplayerwordgame_border"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/small_board_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twoplayerwordgame_timer_label"/>

            <TextView
                android:id="@+id/twoplayerwordgame_timer"
                android:layout_width="wrap_content"
                android:text="@string/twoplayerwordgame_timer_init"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/twoplayerwordgame_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoplayerwordgame_pause_label"
            style="@android:style/Widget.Button.Small"
            android:minHeight="0dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="-5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/twoplayerwordgame_timer_frame" />

        <LinearLayout
            android:id="@+id/twoplayerwordgame_score_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/twoplayerwordgame_border"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/small_board_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twoplayerwordgame_score_label"/>

            <TextView
                android:id="@+id/twoplayerwordgame_score"
                android:layout_width="wrap_content"
                android:text="@string/twoplayerwordgame_score_init"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <fragment
            android:id="@+id/twoplayerwordgame_fragment_game"
            class="edu.neu.madcourse.adibalwani.twoplayerwordgame.GameFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            tools:layout="@layout/twoplayerwordgame_fragment_game"/>

        <TextView
            android:id="@+id/twoplayerwordgame_word_formed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/twoplayerwordgame_border"
            android:padding="@dimen/small_board_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_above="@id/twoplayerwordgame_fragment_game"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/twoplayerwordgame_word_list_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/twoplayerwordgame_word_formed"
            android:layout_below="@id/twoplayerwordgame_pause_button"/>

    </RelativeLayout>

</FrameLayout>